# tagstr

./: README.md  pep.rst  pyproject.toml  september-update.md  temp.py  tutorial.rst
docker/: README.md
docker/alpine3.18/: Dockerfile
docker/alpine3.19/: Dockerfile
docker/bookworm/: Dockerfile
docker/bullseye/: Dockerfile
docker/slim-bookworm/: Dockerfile
docker/slim-bullseye/: Dockerfile
docs/: conf.py  index.rst  pep.rst  tutorial.rst
docs/examples/: index.rst
examples/: code.py  fl.py  htmldom.py  htmltag.py  interpolation_template.py  linenoise.py  rewrite.py  shell.py  sql.py  taglib.py  temp.py
src/tagstr/: __init__.py  fl.py  greeting.py  htmlbuilder.py  htmltag.py  interpolation_template.py  linenoise.py  python_code.py  rewrite.py  sql.py  taglib.py
tests/: test_examples.py  test_thunks.py
